Existe aussi en pot familial.

--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 YayPonies iTunes Nagios check scripts
 -------------------------------------
 YP tools are provided as it is, there might or might not
-be a README, there might or might not be a licences,
-we warranty absolutely nothing, it does work for us.
+be a README, we warranty absolutely nothing, it does work for us.
 -------------------------------------
 
 usage:
